--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Caluculator</title>
-    <link href="calculator_tutorial.css" rel="stylesheet">
-    <script src="calculator_tutorial.js" defer></script>
+    <link href="styles.css" rel="stylesheet">
+    <script src="app.js" defer></script>
 </head>
 <body>
     <div class="calculator-grid">
